--- a/闭包和原型链的学习.md
+++ b/闭包和原型链的学习.md
@@ -1,2 +1,98 @@
 # closure-prototype
 闭包+原型
+
+## 闭包
+
+### 闭包的概念
+
++ 官网解释：一个拥有许多变量和绑定了这些变量的环境的表达式（通常是一个函数），因而这些变量也是该表达式的一部分
++ 个人理解：闭包就是能够读取其他函数内部变量的函数
+
+### 闭包的特点
+
+1. 可以读取函数内部的变量
+2. 这些变量的值始终保持在内存中
+
+### 闭包的缺点
+
++ 由于闭包会使得函数中的变量全部保存在内存中，内存消耗大，在IE中会造成内存泄漏
+
+### 简单的闭包写法
+
+```javascript  
+
+function A(){            //    定义函数A
+    function B(){        //    在函数A中定义函数B
+       console.log('Hello Closure!');
+    }
+    return B;            //     在函数A中返回函数B
+}
+var C = A();             //     执行 A，并把 A 的返回结果赋值给变量 C
+C();// Hello Closure!    //     执行C  
+
+```
+
+### 闭包的其他写法
+
+```javascript 
+
+// 第一种
+function Circle(r) {  
+      this.r = r;  
+}  
+Circle.PI = 3.14159;  
+Circle.prototype.area = function() {  
+  return Circle.PI * this.r * this.r;  
+}  
+  
+var c = new Circle(1);     
+alert(c.area());  
+
+----------------------------------------------
+
+// 第二种
+var Circle = function() {  
+   var obj = new Object();  
+   obj.PI = 3.14159;  
+     
+   obj.area = function( r ) {  
+       return this.PI * r * r;  
+   }  
+   return obj;  
+}  
+  
+var c = new Circle();  
+alert( c.area( 1.0 ) );  
+
+----------------------------------------------
+
+// 第3种  
+var Circle = new Object();  
+Circle.PI = 3.14159;  
+Circle.Area = function( r ) {  
+       return this.PI * r * r;  
+}  
+  
+alert( Circle.Area( 1 ) ); 
+
+----------------------------------------------
+
+// 第4种  
+var Circle={  
+   "PI":3.14159,  
+ "area":function(r){  
+          return this.PI * r * r;  
+        }  
+};  
+alert( Circle.area(1.0) ); 
+
+----------------------------------------------
+
+// 第五种（用的比较少）
+var Circle = new Function("this.PI = 3.14159;this.area = function( r ) {return r*r*this.PI;}");  
+  
+alert( (new Circle()).area(1.0) );  
+
+----------------------------------------------
+
+```
