--- a/闭包和原型链的学习.md
+++ b/闭包和原型链的学习.md
@@ -17,7 +17,7 @@
 
 + 由于闭包会使得函数中的变量全部保存在内存中，内存消耗大，在IE中会造成内存泄漏
 
-### 简单的闭包写法
+### 闭包的简单写法
 
 ```javascript  
 
@@ -96,3 +96,9 @@ alert( (new Circle()).area(1.0) );
 ----------------------------------------------
 
 ```
+
+## 原型
+
+### 原型的概念
+
++ js语言是基于原型的语言，在js中几乎一切都是对象，每个对象都有原型，而原型也是一个对象，也有自己的原型，从而形成原型链
