--- a/闭包和原型链的学习.md
+++ b/闭包和原型链的学习.md
@@ -97,8 +97,164 @@ alert( (new Circle()).area(1.0) );
 
 ```
 
-## 原型
+## 原型（写的比较乱）
 
 ### 原型的概念
 
-+ js语言是基于原型的语言，在js中几乎一切都是对象，每个对象都有原型，而原型也是一个对象，也有自己的原型，从而形成原型链
++ 一个对象就是一个属性集合，并拥有一个独立的prototype（原型）对象。这个prototype可以是一个对象或者null。
++ js语言是基于原型的语言，在js中几乎一切都是对象，每个对象都有原型，而原型也是一个对象，也有自己的原型，从而形成原型链。
+
+### 原型继承（也叫做委托继承）
+
++ 原型继承是代码重用的一种实现方式----类A为重用部分，类B和类C继承类A，然后给自己添加不同的属性。
+
++ > ES5实现原型继承  ------   Object.create
+
+```javascript
+
+  var a = {
+      x: 10,
+    calculate: function (z) {
+        return this.x + this.y + z
+      }
+  };
+  
+  var b = Object.create(a, {y: {value: 20}});
+  var c = Object.create(a, {y: {value: 30}});
+  
+  b.calculate(30); // 60
+  c.calculate(40); // 80
+
+```
+
++ > ES6标准化了 `__proto__`属性，并且可以在对象初始化的时候使用它
+
+```javascript
+  var b = {
+    y: 20,
+    __proto__: a
+  };
+
+  var c = {
+    y: 30,
+    __proto__: a
+  };
+```
+
++ > ES6带来了另一个接口，可以绕过创建对象的过程，直接操作原型  ----  Object.setPrototypeOf
+
+```javascript
+
+   var a = {};
+   var b = {};
+   Object.setPrototypeOf(a, b);
+
+```
+
+### 构造函数
+
++ 构造函数会为新创建的对象设置一个原型对象，这个原型对象存储在ConstructorFunction.prototype 属性中。
+
+```javascript
+  function Foo(y){
+    this.y = y;
+  };
+  
+  Foo.prototype.x=10;
+  Foo.prototype.calculate = function (z) {
+     return this.x + this.y + z
+  }
+  
+  var b = new Foo(20);
+  var c = new Foo(30);
+  
+  b.calculate(30);
+  c.calculate(40);
+  
+  ```
+  
++ ES6中的类就是构造函数和原型对象的集合
+
+```javascript
+  class Foo {
+    constructor(name) {
+      this._name = name;
+    }
+
+    getName() {
+      return this._name;
+    }
+  }
+
+  class Bar extends Foo {
+    getName() {
+      return super.getName() + ' Doe';  
+      //  super 关键字用于访问父对象上的函数。
+      //  super指代了整个prototype或者__proto__指向的对象
+    }
+  }
+
+  var bar = new Bar('John');
+  console.log(bar.getName()); // John Doe
+
+```
+```javascript
+
+   ES6 中 super关键字的使用
+   
+   一、 类
+   
+   1. 用在子类constructor函数中
+      
+      class Person {
+         constructor (name) {
+            this.name = name;
+         }
+      }
+      class Student extends Person {
+          constructor (name, age) {
+             super(); // 用在构造函数中，必须在使用this之前调用
+             this.age = age;
+          }
+      }
+      
+  ---------------------------------------------------------------------
+  
+  2. 调用父类的静态函数
+  
+     class Human {
+       constructor(){}
+       static ping() {
+         return 'ping'
+       }
+     }
+     class Computer extends Human {
+       constructor() {}
+       static pingpong() {
+         return super.ping() + 'pong'
+       }
+       // 只有在子类的静态函数中才能调用父类的静态函数（babel环境测试，按理说，在实例函数中应该也可以调用，不过实际测试环境中报错）
+     } 
+     Computer.pingpong();
+     
+  ------------------------------------------------------------------------------
+     
+  二、  对象的字面量（__proto__项目）
+  
+    var obj1 = {
+      method1(){
+        console.log('method1')
+      }
+    }
+    var obj2 = {
+      method2(){
+        super.method1()
+      }
+    }
+    // 必须利用setPrototypeOf将第二个对象的原型设为第一个对象
+    Object.setPrototypeOf(obj2, obj1);
+    obj2.method2();
+  
+  ---------------------------------------------------------------
+
+```
