--- a/闭包和原型链的学习.md
+++ b/闭包和原型链的学习.md
@@ -101,14 +101,14 @@ alert( (new Circle()).area(1.0) );
 
 ### 原型的概念
 
-+ 一个对象就是一个属性集合，并拥有一个独立的prototype（原型）对象。这个prototype可以是一个对象或者null。
++ 一个对象就是一个属性集合，并拥有一个独立的`prototype`（原型）对象。这个`prototype`可以是一个对象或者`null`。
 + js语言是基于原型的语言，在js中几乎一切都是对象，每个对象都有原型，而原型也是一个对象，也有自己的原型，从而形成原型链。
 
 ### 原型继承（也叫做委托继承）
 
 + 原型继承是代码重用的一种实现方式----类A为重用部分，类B和类C继承类A，然后给自己添加不同的属性。
 
-+ > ES5实现原型继承  ------   Object.create
++ > ES5实现原型继承  ------   `Object.create`
 
 ```javascript
 
@@ -141,7 +141,7 @@ alert( (new Circle()).area(1.0) );
   };
 ```
 
-+ > ES6带来了另一个接口，可以绕过创建对象的过程，直接操作原型  ----  Object.setPrototypeOf
++ > ES6带来了另一个接口，可以绕过创建对象的过程，直接操作原型  ----  `Object.setPrototypeOf`
 
 ```javascript
 
@@ -153,7 +153,7 @@ alert( (new Circle()).area(1.0) );
 
 ### 构造函数
 
-+ 构造函数会为新创建的对象设置一个原型对象，这个原型对象存储在ConstructorFunction.prototype 属性中。
++ 构造函数会为新创建的对象设置一个原型对象，这个原型对象存储在`ConstructorFunction.prototype` 属性中。
 
 ```javascript
   function Foo(y){
@@ -200,7 +200,7 @@ alert( (new Circle()).area(1.0) );
 ```
 ```javascript
 
-   ES6 中 super关键字的使用
+   ES6 中 `super`关键字的使用
    
    一、 类
    
@@ -239,7 +239,7 @@ alert( (new Circle()).area(1.0) );
      
   ------------------------------------------------------------------------------
      
-  二、  对象的字面量（__proto__项目）
+  二、  对象的字面量（`__proto__`项目）
   
     var obj1 = {
       method1(){
