--- a/闭包和原型链的学习.md
+++ b/闭包和原型链的学习.md
@@ -200,7 +200,7 @@ alert( (new Circle()).area(1.0) );
 ```
 ```javascript
 
-   ES6 中 `super`关键字的使用
+   ES6 中 super关键字的使用
    
    一、 类
    
@@ -239,7 +239,7 @@ alert( (new Circle()).area(1.0) );
      
   ------------------------------------------------------------------------------
      
-  二、  对象的字面量（`__proto__`项目）
+  二、  对象的字面量（__proto__项目）
   
     var obj1 = {
       method1(){
